--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,20 @@
   <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
     <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
     <ul class="nav navbar-nav">
+      <% unless current_user %>
+        <li class="nav-item">
+          <%= link_to "Log In", login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign up", new_user_path, class: "nav-link"%>
+        </li>
+      <% else %>
       <li class="nav-item">
-        <a class="nav-link" href="#">Log In</a>
+        <%= link_to "Log out", logout_path, method: "delete", class: "nav-link" %>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
-      </li>
+      <% end %>
     </ul>
-  </nav>  
+  </nav>
 
 <%= yield %>
 
