--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,23 +19,35 @@
           </div>
           <div class="clearfix"></div>
         <% end %>
+        <% if !is_published? && is_publisher? %>
+          <%= link_to published_event_path(@event) do %>
+            <button class='btn btn-lg btn-block btn-primary'> PUBLISH </button>
+          <% end %>
+        <% end %>
+        <% if is_published? %>
+          <%= link_to new_event_ticket_path(@event) do %>
+            <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
+          <% end %>
+        <% end %>
         <%= link_to new_event_ticket_path(@event) do %>
           <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
         <% end %>
       </div>
     </div>
+
     <div class="col-md-9 event-content">
       <div class="hero-img hidden-sm-down" style="background-image: url(<%= @event.hero_image_url %>); background-size: cover;"> </div>
+
       <div class="container">
         <h3> <%= @event.name %> </h3>
         <div class="pull-left">
           <%= fa_icon 'clock-o' %>
         </div>
-        <div class="time-details"> 
-          <%= @event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %> 
+        <div class="time-details">
+          <%= @event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %>
         </div>
 
-        
+
 
         <div class="pull-left">
           <%= fa_icon 'map-marker' %>
@@ -52,8 +64,7 @@
         <div class="extended-description">
           <%= @event.extended_html_description.html_safe %>
         </div>
-
-      </div>  
+      </div>
     </div>
   </div>
 </div>
