--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -47,34 +47,11 @@
     </div>
   </div>
   <div class="row">
-    <!-- <div class="col-md-2 col-md-offset-5">
-      <button class="btn btn-success btn-lg btn-block"> Buy </button>
-    </div> -->
     <div class="col-md-2 col-md-offset-5">
-      <!-- <%= link_to "Add Ticket", new_event_ticket_path, class: "btn btn-warning btn-lg btn-block" %> -->
-      <!-- <button class="btn btn-warning btn-lg btn-block"> Add Ticket </button> -->
+      <button class="btn btn-success btn-lg btn-block"> Buy </button>
     </div>
-  </div>
-  <div class="form">
-    <div>
-      <h3>*Add New Ticket*</h3>
+    <div class="col-md-2 col-md-offset-5">
+      <%= link_to "Add Ticket", new_event_ticket_path, class: "btn btn-warning btn-lg btn-block" %>
     </div>
-    <%= form_for TicketType.new, :url => event_tickets_path(@event) do |f| %>
-      <div class="form-group form-inline">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.label :price %>
-        <%= f.text_field :price, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.label :max_quantity %>
-        <%= f.text_field :max_quantity, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.submit "Add Ticket", class: "btn btn-warning btn-lg" %>
-        <%= link_to "Cancel", root_path, class: "btn btn-danger btn-lg"%>
-      </div>
-    <% end %>
-  </div>
+  <div>
+</div>
