--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -19,19 +19,32 @@
           </div>
           <div class="clearfix"></div>
         <% end %>
+        <% if is_publisher? %>
+          <%= link_to edit_event_path(@event) do %>
+            <button class='btn btn-lg btn-block btn-warning'> UPDATE INFO </button>
+          <% end %>
+        <% end %>
         <% if !is_published? && is_publisher? %>
           <%= link_to published_event_path(@event) do %>
             <button class='btn btn-lg btn-block btn-primary'> PUBLISH </button>
           <% end %>
         <% end %>
         <% if is_published? %>
-          <%= link_to new_event_ticket_path(@event) do %>
-            <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
-          <% end %>
-        <% end %>
-        <%= link_to new_event_ticket_path(@event) do %>
-          <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
-        <% end %>
+         <%= link_to new_event_ticket_path(@event) do %>
+           <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
+         <% end %>
+       <% end %>
+        <!-- <% if is_published? %>
+         <% if logged_in? %>
+           <%= link_to new_event_ticket_path(@event) do %>
+             <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
+           <% end %>
+         <% else %>
+           <%= link_to login_path do %>
+             <button class='btn btn-lg btn-block btn-danger'> BOOK NOW </button>
+           <% end %>
+         <% end %>
+       <% end %> -->
       </div>
     </div>
 
