--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,10 @@
           <%= link_to "New Event", new_event_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "New Venue", new_event_path, class: "nav-link" %>
+          <%= link_to "My Event", mine_events_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "New Venue", new_venue_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
