--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -17,8 +17,6 @@
       <div class="time-details">
         <%= @event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %>
       </div>
-
-
     </div>
   </div>
   <div class="row">
@@ -28,15 +26,14 @@
         <th> Unit Price </th>
         <th> Quantity </th>
         <th></th>
-        <!-- <%# form_tag user_tickets_path, method: "post" do %> -->
 
-          <% @event.ticket_types.each do |type| %>
+        <% @event.ticket_types.each do |type| %>
+
           <%= form_for UserTicket.new, url: user_tickets_path do |f| %>
           <tr>
             <td> <%= type.name %> </td>
             <td> <%= number_to_currency(type.price, unit: 'VND ', precision: 0) %> </td>
-            <!-- <td> <%# select_tag('quantity', options_for_select(0..10, :selected => params[:quanity])) %> </td> -->
-            <%= f.hidden_field :user_id, :value => current_user.id %>
+            <%# f.hidden_field :user_id, :value => current_user.id %>
             <%= f.hidden_field :ticket_type_id, :value => type.id %>
             <td> <%= f.select :quantity, options_for_select(0..10) %> </td>
             <td> <%= f.submit "Buy", class: "btn btn-success" %> </td>
@@ -55,26 +52,28 @@
       <!-- <button class="btn btn-warning btn-lg btn-block"> Add Ticket </button> -->
     </div>
   </div>
-  <div class="form">
-    <div>
-      <h3>*Add New Ticket*</h3>
+  <% if logged_in? %>
+    <div class="form">
+      <div>
+        <h3>*Add New Ticket*</h3>
+      </div>
+      <%= form_for TicketType.new, :url => event_tickets_path(@event) do |f| %>
+        <div class="form-group form-inline">
+          <%= f.label :name %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="form-group form-inline">
+          <%= f.label :price %>
+          <%= f.text_field :price, class: "form-control" %>
+        </div>
+        <div class="form-group form-inline">
+          <%= f.label :max_quantity %>
+          <%= f.text_field :max_quantity, class: "form-control" %>
+        </div>
+        <div class="form-group form-inline">
+          <%= f.submit "Add Ticket", class: "btn btn-warning btn-lg" %>
+          <%= link_to "Cancel", root_path, class: "btn btn-danger btn-lg"%>
+        </div>
+      <% end %>
     </div>
-    <%= form_for TicketType.new, :url => event_tickets_path(@event) do |f| %>
-      <div class="form-group form-inline">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.label :price %>
-        <%= f.text_field :price, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.label :max_quantity %>
-        <%= f.text_field :max_quantity, class: "form-control" %>
-      </div>
-      <div class="form-group form-inline">
-        <%= f.submit "Add Ticket", class: "btn btn-warning btn-lg" %>
-        <%= link_to "Cancel", root_path, class: "btn btn-danger btn-lg"%>
-      </div>
-    <% end %>
-  </div>
+  <% end %>
