--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -28,15 +28,15 @@
         <th></th>
 
         <% @event.ticket_types.each do |type| %>
-
           <%= form_for UserTicket.new, url: user_tickets_path do |f| %>
           <tr>
             <td> <%= type.name %> </td>
             <td> <%= number_to_currency(type.price, unit: 'VND ', precision: 0) %> </td>
-            <%# f.hidden_field :user_id, :value => current_user.id %>
             <%= f.hidden_field :ticket_type_id, :value => type.id %>
             <td> <%= f.select :quantity, options_for_select(0..10) %> </td>
-            <td> <%= f.submit "Buy", class: "btn btn-success" %> </td>
+            <% if @event.published_at != nil %>
+              <td> <%= f.submit "Buy", class: "btn btn-success" %> </td>
+            <% end %>
           </tr>
           <% end %>
         <% end %>
@@ -53,27 +53,29 @@
     </div>
   </div>
   <% if logged_in? %>
-    <div class="form">
-      <div>
-        <h3>*Add New Ticket*</h3>
+    <% if @event.user_id == current_user.id %>
+      <div class="form">
+        <div>
+          <h3>*Add New Ticket*</h3>
+        </div>
+        <%= form_for TicketType.new, :url => event_tickets_path(@event) do |f| %>
+          <div class="form-group form-inline">
+            <%= f.label :name %>
+            <%= f.text_field :name, class: "form-control" %>
+          </div>
+          <div class="form-group form-inline">
+            <%= f.label :price %>
+            <%= f.text_field :price, class: "form-control" %>
+          </div>
+          <div class="form-group form-inline">
+            <%= f.label :max_quantity %>
+            <%= f.text_field :max_quantity, class: "form-control" %>
+          </div>
+          <div class="form-group form-inline">
+            <%= f.submit "Add Ticket", class: "btn btn-warning btn-lg" %>
+            <%= link_to "Cancel", event_path(@event), class: "btn btn-danger btn-lg"%>
+          </div>
+        <% end %>
       </div>
-      <%= form_for TicketType.new, :url => event_tickets_path(@event) do |f| %>
-        <div class="form-group form-inline">
-          <%= f.label :name %>
-          <%= f.text_field :name, class: "form-control" %>
-        </div>
-        <div class="form-group form-inline">
-          <%= f.label :price %>
-          <%= f.text_field :price, class: "form-control" %>
-        </div>
-        <div class="form-group form-inline">
-          <%= f.label :max_quantity %>
-          <%= f.text_field :max_quantity, class: "form-control" %>
-        </div>
-        <div class="form-group form-inline">
-          <%= f.submit "Add Ticket", class: "btn btn-warning btn-lg" %>
-          <%= link_to "Cancel", root_path, class: "btn btn-danger btn-lg"%>
-        </div>
-      <% end %>
-    </div>
+    <% end %>
   <% end %>
